# grounded-rag-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/docs/: data-retention.md  idempotency.md  rate-limits.md  retries.md  security.md  webhooks.md
data/squad/: docs.jsonl  gold.jsonl
eval/: gold.jsonl
eval/reports/: comparison.md  report.json  retrieval_dense.json  retrieval_hybrid.json  retrieval_sparse.json  summary.md
scripts/: build_squad.py
src/grounded_rag/: __init__.py  cli.py  pipeline.py
src/grounded_rag/agent/: __init__.py  agent.py  citations.py  cost.py  guards.py  loop.py  otel.py  prompts.py  retriever_adapter.py  tool_calculator.py  tool_search_docs.py  tools.py  types.py
src/grounded_rag/core/: __init__.py  config.py  errors.py  gitmeta.py  logging.py  pricing.py  types.py
src/grounded_rag/core/clients/: __init__.py  cohere_client.py  embedder.py  local_embedder.py  mock.py  protocol.py  reranker.py
src/grounded_rag/core/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  factory.py  mock.py  openai_provider.py
src/grounded_rag/eval/: __init__.py  comparison.py  judge.py  metrics.py  report.py  retrieval.py  runner.py  schema.py
src/grounded_rag/retrieval/: __init__.py  bm25.py  chunker.py  embedder_iface.py  fusion.py  retriever.py  store.py  store_chroma.py  types.py
tests/: test_live_smoke.py  test_pipeline.py  test_smoke.py
tests/agent/: conftest.py  test_calculator.py  test_citations.py  test_guards.py  test_loop_mocked_cohere.py  test_refusal.py  test_retriever_adapter.py  test_tools.py
tests/core/: test_cohere_wrapper.py  test_config.py  test_mock_client.py  test_pricing.py  test_providers.py  test_types_roundtrip.py
tests/eval/: test_comparison.py  test_judge_parse.py  test_metrics.py  test_report.py  test_retrieval.py  test_runner_mock_integration.py  test_schema.py
tests/retrieval/: conftest.py  test_bm25.py  test_chunker.py  test_cosine.py  test_embed_toggle.py  test_fusion.py  test_no_network.py  test_path_toggle_integration.py  test_rerank_toggle.py  test_retriever_dense.py  test_retriever_hybrid.py  test_store_inmemory.py
