[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grounded-rag-agent"
version = "0.1.0"
description = "An evaluation-first, grounded, agentic RAG reference implementation on Cohere's stack."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hitesh Goel" }]
keywords = ["rag", "cohere", "agents", "evaluation", "retrieval", "llm"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies. Deliberately thin: no LangChain, no heavy vector DB by default.
dependencies = [
    "cohere==7.0.4",          # ClientV2; verified current against docs.cohere.com (2026-06)
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "structlog>=24.1",
    "numpy>=1.26,<3",
    "rank-bm25>=0.2.2",       # pure-python BM25Okapi; lazy-imported in retrieval.bm25
]

[project.optional-dependencies]
# Heavy / situational backends live behind extras so the default install stays light
# and CI passes without them.
chroma = ["chromadb>=0.5"]
otel = ["opentelemetry-sdk>=1.25", "opentelemetry-api>=1.25"]
# Alternative judge/generation providers (lazy-imported; only needed to run them).
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.39"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/mannutech/grounded-rag-agent"
Repository = "https://github.com/mannutech/grounded-rag-agent"

[project.scripts]
grounded-rag = "grounded_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grounded_rag"]

# ----------------------------------------------------------------------------
# Ruff — lint + format. Fast, opinionated, replaces black/isort/flake8.
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",     # line length is enforced by the formatter, not the linter
    "RUF022",   # __all__ is grouped by subsystem with comment headers, not alphabetised
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow `assert False` style in tests

# ----------------------------------------------------------------------------
# mypy — static types. Strict where it buys us safety on the public surface.
# ----------------------------------------------------------------------------
[tool.mypy]
# Target 3.12 so mypy can parse numpy's PEP 695 (`type` statement) stubs. The
# package still supports 3.11+ at runtime — CI runs pytest on both 3.11 and 3.12,
# and ruff's target-version=py311 guards against 3.12-only syntax in our code.
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Optional / untyped third-party backends — don't fail the type check on them.
module = ["rank_bm25.*", "chromadb.*", "cohere.*", "opentelemetry.*", "openai.*", "anthropic.*"]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: hits the real Cohere API; requires CO_API_KEY (skipped by default in CI)",
]
